# prodev-lab

./: PREREQUISITIES.md  README.md  agent.ipynb  hello-world.ipynb
resources/: hr_auth.json  main1.py  main2_multiple_agents.py  main3_validation.py  main4_hr.py  main5_permission_check_hr.py  main6_HITL.py
src/company-agent/: .env  pyproject.toml
